--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0"
+    "express-handlebars": "^3.0.0",
+    "mongoose": "^5.0.11",
+    "morgan": "^1.9.0"
   }
 }
